--- a/board_sierra/CubeMX/CubeMX.ioc
+++ b/board_sierra/CubeMX/CubeMX.ioc
@@ -1,10 +1,16 @@
 #MicroXplorer Configuration settings - do not modify
-CAN1.CalculateTimeQuantum=4000.0
-CAN1.IPParameters=CalculateTimeQuantum
-CAN2.CalculateTimeQuantum=4000.0
-CAN2.IPParameters=CalculateTimeQuantum
+CAN1.BS1=CAN_BS1_1TQ
+CAN1.BS2=CAN_BS2_1TQ
+CAN1.CalculateTimeQuantum=200.0
+CAN1.IPParameters=CalculateTimeQuantum,BS1,BS2
+CAN2.BS1=CAN_BS1_1TQ
+CAN2.BS2=CAN_BS2_1TQ
+CAN2.CalculateTimeQuantum=200.0
+CAN2.IPParameters=CalculateTimeQuantum,BS1,BS2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=Timing
+I2C1.Timing=0x10909CEC
 KeepUserPlacement=false
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
@@ -56,9 +62,9 @@ PA11.Mode=Master
 PA11.Signal=CAN1_RX
 PA12.Mode=Master
 PA12.Signal=CAN1_TX
-PA13\ (JTMS/SWDIO).Mode=Trace_Asynchronous_SW
+PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=SYS_JTMS-SWDIO
-PA14\ (JTCK/SWCLK).Mode=Trace_Asynchronous_SW
+PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=SYS_JTCK-SWCLK
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -66,7 +72,7 @@ PB12.Mode=Slave
 PB12.Signal=CAN2_RX
 PB13.Mode=Slave
 PB13.Signal=CAN2_TX
-PB3\ (JTDO/TRACESWO).Mode=Trace_Asynchronous_SW
+PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Signal=SYS_JTDO-SWO
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
@@ -79,7 +85,7 @@ PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Clock-Source
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).GPIOParameters=GPIO_Label
-PH1-OSC_OUT\ (PH1).GPIO_Label=RCC_OSC_EN
+PH1-OSC_OUT\ (PH1).GPIO_Label=OSC_OE
 PH1-OSC_OUT\ (PH1).Locked=true
 PH1-OSC_OUT\ (PH1).Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -109,33 +115,62 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
-RCC.ADCFreq_Value=16000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
+RCC.ADCFreq_Value=32000000
+RCC.AHBFreq_Value=80000000
+RCC.APB1Freq_Value=80000000
+RCC.APB1TimFreq_Value=80000000
+RCC.APB2Freq_Value=80000000
+RCC.APB2TimFreq_Value=80000000
+RCC.CortexFreq_Value=80000000
+RCC.DFSDMFreq_Value=80000000
+RCC.FCLKCortexFreq_Value=80000000
 RCC.FamilyName=M
-RCC.HSE_VALUE=8000000
+RCC.HCLKFreq_Value=80000000
+RCC.HSE_VALUE=48000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=ADCFreq_Value,FamilyName,HSE_VALUE,HSI48_VALUE,HSI_VALUE,LSCOPinFreq_Value,LSI_VALUE,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.I2C1Freq_Value=80000000
+RCC.I2C2Freq_Value=80000000
+RCC.I2C3Freq_Value=80000000
+RCC.I2C4Freq_Value=80000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.LPTIM1Freq_Value=80000000
+RCC.LPTIM2Freq_Value=80000000
+RCC.LPUART1Freq_Value=80000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSI_VALUE=32000
+RCC.MCO1PinFreq_Value=80000000
 RCC.MSI_VALUE=4000000
-RCC.PLLPoutputFreq_Value=16000000
-RCC.PLLQoutputFreq_Value=16000000
-RCC.PLLRCLKFreq_Value=16000000
-RCC.PLLSAI1PoutputFreq_Value=16000000
-RCC.PLLSAI1QoutputFreq_Value=16000000
-RCC.PLLSAI1RoutputFreq_Value=16000000
-RCC.PLLSAI2PoutputFreq_Value=16000000
-RCC.PLLSAI2RoutputFreq_Value=16000000
-RCC.RNGFreq_Value=16000000
-RCC.SAI1Freq_Value=16000000
-RCC.SAI2Freq_Value=16000000
-RCC.SDMMCFreq_Value=16000000
-RCC.USBFreq_Value=16000000
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=32000000
-RCC.VCOSAI1OutputFreq_Value=32000000
-RCC.VCOSAI2OutputFreq_Value=32000000
+RCC.PLLM=6
+RCC.PLLN=20
+RCC.PLLPoutputFreq_Value=80000000
+RCC.PLLQoutputFreq_Value=80000000
+RCC.PLLRCLKFreq_Value=80000000
+RCC.PLLSAI1PoutputFreq_Value=32000000
+RCC.PLLSAI1QoutputFreq_Value=32000000
+RCC.PLLSAI1RoutputFreq_Value=32000000
+RCC.PLLSAI2PoutputFreq_Value=32000000
+RCC.PLLSAI2RoutputFreq_Value=32000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PWRFreq_Value=80000000
+RCC.RNGFreq_Value=32000000
+RCC.SAI1Freq_Value=32000000
+RCC.SAI2Freq_Value=32000000
+RCC.SDMMCFreq_Value=32000000
+RCC.SWPMI1Freq_Value=80000000
+RCC.SYSCLKFreq_VALUE=80000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.UART4Freq_Value=80000000
+RCC.UART5Freq_Value=80000000
+RCC.USART1Freq_Value=80000000
+RCC.USART2Freq_Value=80000000
+RCC.USART3Freq_Value=80000000
+RCC.USBFreq_Value=32000000
+RCC.VCOInputFreq_Value=8000000
+RCC.VCOOutputFreq_Value=160000000
+RCC.VCOSAI1OutputFreq_Value=64000000
+RCC.VCOSAI2OutputFreq_Value=64000000
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
