--- a/board_sierra/CubeMX/CubeMX.ioc
+++ b/board_sierra/CubeMX/CubeMX.ioc
@@ -1,24 +1,85 @@
 #MicroXplorer Configuration settings - do not modify
+CAN1.CalculateTimeQuantum=4000.0
+CAN1.IPParameters=CalculateTimeQuantum
+CAN2.CalculateTimeQuantum=4000.0
+CAN2.IPParameters=CalculateTimeQuantum
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
 Mcu.Family=STM32L4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP0=CAN1
+Mcu.IP1=CAN2
+Mcu.IP10=SYS
+Mcu.IP11=UART4
+Mcu.IP12=UART5
+Mcu.IP13=USART1
+Mcu.IP14=USART2
+Mcu.IP15=USART3
+Mcu.IP2=I2C1
+Mcu.IP3=I2C2
+Mcu.IP4=I2C4
+Mcu.IP5=NVIC
+Mcu.IP6=QUADSPI
+Mcu.IP7=RCC
+Mcu.IP8=SPI1
+Mcu.IP9=SPI2
+Mcu.IPNb=16
 Mcu.Name=STM32L496Q(E-G)Ix
 Mcu.Package=UFBGA132
-Mcu.Pin0=PB3 (JTDO/TRACESWO)
-Mcu.Pin1=PA14 (JTCK/SWCLK)
-Mcu.Pin2=PA13 (JTMS/SWDIO)
-Mcu.Pin3=PC14-OSC32_IN (PC14)
-Mcu.Pin4=PC15-OSC32_OUT (PC15)
-Mcu.Pin5=PH0-OSC_IN (PH0)
-Mcu.Pin6=PH1-OSC_OUT (PH1)
-Mcu.Pin7=VP_RCC_LSE
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin0=PB8
+Mcu.Pin1=PD5
+Mcu.Pin10=PB6
+Mcu.Pin11=PD6
+Mcu.Pin12=PD4
+Mcu.Pin13=PD3
+Mcu.Pin14=PD1
+Mcu.Pin15=PC12
+Mcu.Pin16=PC10
+Mcu.Pin17=PA11
+Mcu.Pin18=PB5
+Mcu.Pin19=PD2
+Mcu.Pin2=PB4 (NJTRST)
+Mcu.Pin20=PC11
+Mcu.Pin21=PA10
+Mcu.Pin22=PC14-OSC32_IN (PC14)
+Mcu.Pin23=PF1
+Mcu.Pin24=PF0
+Mcu.Pin25=PG9
+Mcu.Pin26=PA9
+Mcu.Pin27=PC15-OSC32_OUT (PC15)
+Mcu.Pin28=PH0-OSC_IN (PH0)
+Mcu.Pin29=PG3
+Mcu.Pin3=PB3 (JTDO/TRACESWO)
+Mcu.Pin30=PG4
+Mcu.Pin31=PG2
+Mcu.Pin32=PC0
+Mcu.Pin33=PD13
+Mcu.Pin34=PC1
+Mcu.Pin35=PC2
+Mcu.Pin36=PA7
+Mcu.Pin37=PD12
+Mcu.Pin38=PD11
+Mcu.Pin39=PC3
+Mcu.Pin4=PA15 (JTDI)
+Mcu.Pin40=PA2
+Mcu.Pin41=PC4
+Mcu.Pin42=PD9
+Mcu.Pin43=PD8
+Mcu.Pin44=PA0
+Mcu.Pin45=PA3
+Mcu.Pin46=PA6
+Mcu.Pin47=PE10
+Mcu.Pin48=PE12
+Mcu.Pin49=PB11
+Mcu.Pin5=PA14 (JTCK/SWCLK)
+Mcu.Pin50=PB0
+Mcu.Pin51=VP_RCC_LSE
+Mcu.Pin52=VP_SYS_VS_Systick
+Mcu.Pin6=PA13 (JTMS/SWDIO)
+Mcu.Pin7=PA12
+Mcu.Pin8=PB9
+Mcu.Pin9=PB7
+Mcu.PinsNb=53
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496QGIx
@@ -35,22 +96,108 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0.Mode=CTS_RTS
+PA0.Signal=USART2_CTS
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
+PA11.Mode=Master
+PA11.Signal=CAN1_RX
+PA12.Mode=CTS_RTS
+PA12.Signal=USART1_RTS
 PA13\ (JTMS/SWDIO).Mode=Trace_Asynchronous_SW
 PA13\ (JTMS/SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK/SWCLK).Signal=SYS_JTCK-SWCLK
+PA15\ (JTDI).Mode=CTS_RTS
+PA15\ (JTDI).Signal=UART4_RTS
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
+PA6.Mode=Dual_Bank
+PA6.Signal=QUADSPI_BK1_IO3
+PA7.Mode=Dual_Bank
+PA7.Signal=QUADSPI_BK1_IO2
+PA9.Mode=Full_Duplex_Master
+PA9.Signal=SPI2_SCK
+PB0.Mode=Dual_Bank
+PB0.Signal=QUADSPI_BK1_IO1
+PB11.Mode=Enable Chip Select for each bank
+PB11.Signal=QUADSPI_BK1_NCS
 PB3\ (JTDO/TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO/TRACESWO).Signal=SYS_JTDO-SWO
+PB4\ (NJTRST).Mode=CTS_RTS
+PB4\ (NJTRST).Signal=USART1_CTS
+PB5.Mode=Slave
+PB5.Signal=CAN2_RX
+PB6.Mode=Slave
+PB6.Signal=CAN2_TX
+PB7.Mode=CTS_RTS
+PB7.Signal=UART4_CTS
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
+PC0.Mode=I2C
+PC0.Signal=I2C4_SCL
+PC1.Mode=Dual_Bank
+PC1.Signal=QUADSPI_BK2_IO0
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
+PC12.Mode=Asynchronous
+PC12.Signal=UART5_TX
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PC2.Mode=Full_Duplex_Master
+PC2.Signal=SPI2_MISO
+PC3.Mode=Full_Duplex_Master
+PC3.Signal=SPI2_MOSI
+PC4.Mode=Dual_Bank
+PC4.Signal=QUADSPI_BK2_IO3
+PD1.Mode=Master
+PD1.Signal=CAN1_TX
+PD11.Mode=CTS_RTS
+PD11.Signal=USART3_CTS
+PD12.Mode=CTS_RTS
+PD12.Signal=USART3_RTS
+PD13.Mode=I2C
+PD13.Signal=I2C4_SDA
+PD2.Mode=Asynchronous
+PD2.Signal=UART5_RX
+PD3.Mode=Enable Chip Select for each bank
+PD3.Signal=QUADSPI_BK2_NCS
+PD4.Mode=CTS_RTS
+PD4.Signal=USART2_RTS
+PD5.Mode=Dual_Bank
+PD5.Signal=QUADSPI_BK2_IO1
+PD6.Mode=Dual_Bank
+PD6.Signal=QUADSPI_BK2_IO2
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
+PD9.Mode=Asynchronous
+PD9.Signal=USART3_RX
+PE10.Mode=Dual_Bank
+PE10.Signal=QUADSPI_CLK
+PE12.Mode=Dual_Bank
+PE12.Signal=QUADSPI_BK1_IO0
+PF0.Mode=I2C
+PF0.Signal=I2C2_SDA
+PF1.Mode=I2C
+PF1.Signal=I2C2_SCL
+PG2.Mode=Full_Duplex_Master
+PG2.Signal=SPI1_SCK
+PG3.Mode=Full_Duplex_Master
+PG3.Signal=SPI1_MISO
+PG4.Mode=Full_Duplex_Master
+PG4.Signal=SPI1_MOSI
+PG9.Mode=Asynchronous
+PG9.Signal=USART1_TX
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Clock-Source
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
-PH1-OSC_OUT\ (PH1).GPIOParameters=GPIO_Label
-PH1-OSC_OUT\ (PH1).GPIO_Label=OSC_EN
-PH1-OSC_OUT\ (PH1).Locked=true
-PH1-OSC_OUT\ (PH1).Signal=GPIO_Output
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -79,7 +226,23 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true,11-MX_UART4_Init-UART4-false-HAL-true,12-MX_UART5_Init-UART5-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_USART3_UART_Init-USART3-false-HAL-true
+SPI1.CalculateBaudRate=2.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
+SPI2.CalculateBaudRate=2.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_RCC_LSE.Mode=CRS SYNC Source LSE
 VP_RCC_LSE.Signal=RCC_LSE
 VP_SYS_VS_Systick.Mode=SysTick
