--- a/board_sierra/CubeMX/CubeMX.ioc
+++ b/board_sierra/CubeMX/CubeMX.ioc
@@ -1,85 +1,149 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SingleDiff-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SingleDiff-0\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
+ADC1.master=1
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SingleDiff-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.NbrOfConversionFlag=1
+ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.SingleDiff-0\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SingleDiff-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC3.SingleDiff-0\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
 CAN1.CalculateTimeQuantum=4000.0
 CAN1.IPParameters=CalculateTimeQuantum
 CAN2.CalculateTimeQuantum=4000.0
 CAN2.IPParameters=CalculateTimeQuantum
+DAC1.DAC_Channel-DAC_OUT2_ExtAndInt=DAC_CHANNEL_2
+DAC1.IPParameters=DAC_Channel-DAC_OUT2_ExtAndInt
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32L4
-Mcu.IP0=CAN1
-Mcu.IP1=CAN2
-Mcu.IP10=SYS
-Mcu.IP11=UART4
-Mcu.IP12=UART5
-Mcu.IP13=USART1
-Mcu.IP14=USART2
-Mcu.IP15=USART3
-Mcu.IP2=I2C1
-Mcu.IP3=I2C2
-Mcu.IP4=I2C4
-Mcu.IP5=NVIC
-Mcu.IP6=QUADSPI
-Mcu.IP7=RCC
-Mcu.IP8=SPI1
-Mcu.IP9=SPI2
-Mcu.IPNb=16
+Mcu.IP0=ADC1
+Mcu.IP1=ADC2
+Mcu.IP10=I2C3
+Mcu.IP11=I2C4
+Mcu.IP12=NVIC
+Mcu.IP13=OPAMP1
+Mcu.IP14=OPAMP2
+Mcu.IP15=QUADSPI
+Mcu.IP16=RCC
+Mcu.IP17=SPI1
+Mcu.IP18=SPI2
+Mcu.IP19=SPI3
+Mcu.IP2=ADC3
+Mcu.IP20=SYS
+Mcu.IP21=TIM1
+Mcu.IP22=TIM2
+Mcu.IP23=TIM3
+Mcu.IP24=TIM4
+Mcu.IP25=UART4
+Mcu.IP26=UART5
+Mcu.IP27=USART1
+Mcu.IP28=USART2
+Mcu.IP29=USART3
+Mcu.IP3=CAN1
+Mcu.IP4=CAN2
+Mcu.IP5=COMP1
+Mcu.IP6=COMP2
+Mcu.IP7=DAC1
+Mcu.IP8=I2C1
+Mcu.IP9=I2C2
+Mcu.IPNb=30
 Mcu.Name=STM32L496Q(E-G)Ix
 Mcu.Package=UFBGA132
-Mcu.Pin0=PB8
-Mcu.Pin1=PD5
-Mcu.Pin10=PB6
-Mcu.Pin11=PD6
-Mcu.Pin12=PD4
-Mcu.Pin13=PD3
-Mcu.Pin14=PD1
-Mcu.Pin15=PC12
-Mcu.Pin16=PC10
-Mcu.Pin17=PA11
+Mcu.Pin0=PD5
+Mcu.Pin1=PB4 (NJTRST)
+Mcu.Pin10=PD4
+Mcu.Pin11=PD3
+Mcu.Pin12=PD1
+Mcu.Pin13=PC12
+Mcu.Pin14=PC10
+Mcu.Pin15=PA11
+Mcu.Pin16=PC13
+Mcu.Pin17=PE5
 Mcu.Pin18=PB5
-Mcu.Pin19=PD2
-Mcu.Pin2=PB4 (NJTRST)
-Mcu.Pin20=PC11
-Mcu.Pin21=PA10
-Mcu.Pin22=PC14-OSC32_IN (PC14)
-Mcu.Pin23=PF1
-Mcu.Pin24=PF0
-Mcu.Pin25=PG9
-Mcu.Pin26=PA9
-Mcu.Pin27=PC15-OSC32_OUT (PC15)
-Mcu.Pin28=PH0-OSC_IN (PH0)
-Mcu.Pin29=PG3
-Mcu.Pin3=PB3 (JTDO/TRACESWO)
-Mcu.Pin30=PG4
-Mcu.Pin31=PG2
-Mcu.Pin32=PC0
-Mcu.Pin33=PD13
-Mcu.Pin34=PC1
-Mcu.Pin35=PC2
-Mcu.Pin36=PA7
-Mcu.Pin37=PD12
-Mcu.Pin38=PD11
-Mcu.Pin39=PC3
-Mcu.Pin4=PA15 (JTDI)
-Mcu.Pin40=PA2
-Mcu.Pin41=PC4
-Mcu.Pin42=PD9
-Mcu.Pin43=PD8
-Mcu.Pin44=PA0
-Mcu.Pin45=PA3
-Mcu.Pin46=PA6
-Mcu.Pin47=PE10
-Mcu.Pin48=PE12
-Mcu.Pin49=PB11
-Mcu.Pin5=PA14 (JTCK/SWCLK)
-Mcu.Pin50=PB0
-Mcu.Pin51=VP_RCC_LSE
-Mcu.Pin52=VP_SYS_VS_Systick
-Mcu.Pin6=PA13 (JTMS/SWDIO)
-Mcu.Pin7=PA12
-Mcu.Pin8=PB9
-Mcu.Pin9=PB7
-Mcu.PinsNb=53
+Mcu.Pin19=PG14
+Mcu.Pin2=PB3 (JTDO/TRACESWO)
+Mcu.Pin20=PG13
+Mcu.Pin21=PD2
+Mcu.Pin22=PD0
+Mcu.Pin23=PC11
+Mcu.Pin24=PA10
+Mcu.Pin25=PC14-OSC32_IN (PC14)
+Mcu.Pin26=PE6
+Mcu.Pin27=PF1
+Mcu.Pin28=PF0
+Mcu.Pin29=PG10
+Mcu.Pin3=PA15 (JTDI)
+Mcu.Pin30=PG9
+Mcu.Pin31=PA9
+Mcu.Pin32=PA8
+Mcu.Pin33=PC15-OSC32_OUT (PC15)
+Mcu.Pin34=PH0-OSC_IN (PH0)
+Mcu.Pin35=PG3
+Mcu.Pin36=PG4
+Mcu.Pin37=PG2
+Mcu.Pin38=PC0
+Mcu.Pin39=PC1
+Mcu.Pin4=PA14 (JTCK/SWCLK)
+Mcu.Pin40=PC2
+Mcu.Pin41=PA4
+Mcu.Pin42=PA7
+Mcu.Pin43=PG8
+Mcu.Pin44=PF14
+Mcu.Pin45=PF15
+Mcu.Pin46=PD12
+Mcu.Pin47=PD11
+Mcu.Pin48=PC3
+Mcu.Pin49=PA2
+Mcu.Pin5=PA13 (JTMS/SWDIO)
+Mcu.Pin50=PA5
+Mcu.Pin51=PD8
+Mcu.Pin52=PB15
+Mcu.Pin53=PB14
+Mcu.Pin54=PB13
+Mcu.Pin55=PA0
+Mcu.Pin56=PA3
+Mcu.Pin57=PA6
+Mcu.Pin58=PC5
+Mcu.Pin59=PB2
+Mcu.Pin6=PA12
+Mcu.Pin60=PE10
+Mcu.Pin61=PE12
+Mcu.Pin62=PB10
+Mcu.Pin63=PB11
+Mcu.Pin64=PB12
+Mcu.Pin65=PA1
+Mcu.Pin66=OPAMP1_VINM
+Mcu.Pin67=OPAMP2_VINM
+Mcu.Pin68=PB0
+Mcu.Pin69=PE9
+Mcu.Pin7=PB9
+Mcu.Pin70=PE11
+Mcu.Pin71=PE13
+Mcu.Pin72=PE14
+Mcu.Pin73=PE15
+Mcu.Pin74=VP_COMP1_VS_VREFINT
+Mcu.Pin75=VP_COMP2_VS_VREFINT
+Mcu.Pin76=VP_RCC_LSE
+Mcu.Pin77=VP_SYS_V_PVD_IN
+Mcu.Pin78=VP_SYS_VS_Systick
+Mcu.Pin8=PB7
+Mcu.Pin9=PD6
+Mcu.PinsNb=79
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496QGIx
@@ -96,106 +160,216 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA0.Mode=CTS_RTS
-PA0.Signal=USART2_CTS
+OPAMP1.IPParameters=PowerSupplyRange
+OPAMP1.PowerSupplyRange=OPAMP_POWERSUPPLY_LOW
+OPAMP1_VINM.Locked=true
+OPAMP1_VINM.Mode=Standalone
+OPAMP1_VINM.Signal=OPAMP1_VINM
+OPAMP2_VINM.Locked=true
+OPAMP2_VINM.Mode=Standalone
+OPAMP2_VINM.Signal=OPAMP2_VINM
+PA0.Locked=true
+PA0.Mode=Standalone
+PA0.Signal=OPAMP1_VINP
+PA1.Locked=true
+PA1.Signal=S_TIM2_CH2
+PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.Mode=Master
-PA11.Signal=CAN1_RX
+PA11.Locked=true
+PA11.Mode=CTS_RTS
+PA11.Signal=USART1_CTS
+PA12.Locked=true
 PA12.Mode=CTS_RTS
 PA12.Signal=USART1_RTS
+PA13\ (JTMS/SWDIO).Locked=true
 PA13\ (JTMS/SWDIO).Mode=Trace_Asynchronous_SW
 PA13\ (JTMS/SWDIO).Signal=SYS_JTMS-SWDIO
+PA14\ (JTCK/SWCLK).Locked=true
 PA14\ (JTCK/SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK/SWCLK).Signal=SYS_JTCK-SWCLK
+PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Mode=CTS_RTS
 PA15\ (JTDI).Signal=UART4_RTS
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
-PA6.Mode=Dual_Bank
-PA6.Signal=QUADSPI_BK1_IO3
-PA7.Mode=Dual_Bank
-PA7.Signal=QUADSPI_BK1_IO2
-PA9.Mode=Full_Duplex_Master
-PA9.Signal=SPI2_SCK
-PB0.Mode=Dual_Bank
-PB0.Signal=QUADSPI_BK1_IO1
-PB11.Mode=Enable Chip Select for each bank
-PB11.Signal=QUADSPI_BK1_NCS
+PA2.Locked=true
+PA2.Mode=SYS_WakeUp3
+PA2.Signal=SYS_WKUP4
+PA3.Locked=true
+PA3.Mode=Standalone
+PA3.Signal=OPAMP1_VOUT
+PA4.Locked=true
+PA4.Signal=COMP_DAC11_group
+PA5.Locked=true
+PA5.Signal=COMP_DAC12_group
+PA6.Locked=true
+PA6.Mode=Standalone
+PA6.Signal=OPAMP2_VINP
+PA7.Locked=true
+PA7.Mode=I2C
+PA7.Signal=I2C3_SCL
+PA8.Locked=true
+PA8.Mode=Clock-out
+PA8.Signal=RCC_MCO
+PA9.Locked=true
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
+PB0.Locked=true
+PB0.Mode=Standalone
+PB0.Signal=OPAMP2_VOUT
+PB10.Locked=true
+PB10.Mode=Full_Duplex_Master
+PB10.Signal=SPI2_SCK
+PB11.Locked=true
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
+PB12.Locked=true
+PB12.Mode=Slave
+PB12.Signal=CAN2_RX
+PB13.Locked=true
+PB13.Mode=Slave
+PB13.Signal=CAN2_TX
+PB14.Locked=true
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.Locked=true
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
+PB2.Mode=INP
+PB2.Signal=COMP1_INP
+PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO/TRACESWO).Signal=SYS_JTDO-SWO
-PB4\ (NJTRST).Mode=CTS_RTS
-PB4\ (NJTRST).Signal=USART1_CTS
-PB5.Mode=Slave
-PB5.Signal=CAN2_RX
-PB6.Mode=Slave
-PB6.Signal=CAN2_TX
+PB4\ (NJTRST).Mode=INP
+PB4\ (NJTRST).Signal=COMP2_INP
+PB5.Locked=true
+PB5.Mode=Full_Duplex_Master
+PB5.Signal=SPI3_MOSI
+PB7.Locked=true
 PB7.Mode=CTS_RTS
 PB7.Signal=UART4_CTS
-PB8.Mode=I2C
-PB8.Signal=I2C1_SCL
-PB9.Mode=I2C
-PB9.Signal=I2C1_SDA
-PC0.Mode=I2C
-PC0.Signal=I2C4_SCL
-PC1.Mode=Dual_Bank
-PC1.Signal=QUADSPI_BK2_IO0
+PB9.Locked=true
+PB9.Signal=S_TIM4_CH4
+PC0.Locked=true
+PC0.Signal=ADCx_IN1
+PC1.Locked=true
+PC1.Signal=ADCx_IN2
+PC10.Locked=true
 PC10.Mode=Asynchronous
 PC10.Signal=UART4_TX
+PC11.Locked=true
 PC11.Mode=Asynchronous
 PC11.Signal=UART4_RX
+PC12.Locked=true
 PC12.Mode=Asynchronous
 PC12.Signal=UART5_TX
+PC13.Locked=true
+PC13.Mode=SYS_WakeUp1
+PC13.Signal=SYS_WKUP2
+PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
+PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
-PC2.Mode=Full_Duplex_Master
-PC2.Signal=SPI2_MISO
-PC3.Mode=Full_Duplex_Master
-PC3.Signal=SPI2_MOSI
-PC4.Mode=Dual_Bank
-PC4.Signal=QUADSPI_BK2_IO3
+PC2.Locked=true
+PC2.Signal=ADCx_IN3
+PC3.Locked=true
+PC3.Signal=ADCx_IN4
+PC5.Locked=true
+PC5.Mode=SYS_WakeUp4
+PC5.Signal=SYS_WKUP5
+PD0.Locked=true
+PD0.Mode=Master
+PD0.Signal=CAN1_RX
+PD1.Locked=true
 PD1.Mode=Master
 PD1.Signal=CAN1_TX
+PD11.Locked=true
 PD11.Mode=CTS_RTS
 PD11.Signal=USART3_CTS
+PD12.Locked=true
 PD12.Mode=CTS_RTS
 PD12.Signal=USART3_RTS
-PD13.Mode=I2C
-PD13.Signal=I2C4_SDA
+PD2.Locked=true
 PD2.Mode=Asynchronous
 PD2.Signal=UART5_RX
-PD3.Mode=Enable Chip Select for each bank
-PD3.Signal=QUADSPI_BK2_NCS
+PD3.Locked=true
+PD3.Mode=CTS_RTS
+PD3.Signal=USART2_CTS
+PD4.Locked=true
 PD4.Mode=CTS_RTS
 PD4.Signal=USART2_RTS
-PD5.Mode=Dual_Bank
-PD5.Signal=QUADSPI_BK2_IO1
-PD6.Mode=Dual_Bank
-PD6.Signal=QUADSPI_BK2_IO2
+PD5.Locked=true
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
+PD6.Locked=true
+PD6.Mode=Asynchronous
+PD6.Signal=USART2_RX
+PD8.Locked=true
 PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
-PD9.Mode=Asynchronous
-PD9.Signal=USART3_RX
-PE10.Mode=Dual_Bank
+PE10.Locked=true
+PE10.Mode=Single Bank 1
 PE10.Signal=QUADSPI_CLK
-PE12.Mode=Dual_Bank
+PE11.Locked=true
+PE11.Mode=Single Bank 1
+PE11.Signal=QUADSPI_BK1_NCS
+PE12.Locked=true
+PE12.Mode=Single Bank 1
 PE12.Signal=QUADSPI_BK1_IO0
+PE13.Locked=true
+PE13.Mode=Single Bank 1
+PE13.Signal=QUADSPI_BK1_IO1
+PE14.Locked=true
+PE14.Mode=Single Bank 1
+PE14.Signal=QUADSPI_BK1_IO2
+PE15.Locked=true
+PE15.Mode=Single Bank 1
+PE15.Signal=QUADSPI_BK1_IO3
+PE5.Locked=true
+PE5.Signal=S_TIM3_CH3
+PE6.Locked=true
+PE6.Mode=SYS_WakeUp2
+PE6.Signal=SYS_WKUP3
+PE9.Locked=true
+PE9.Signal=S_TIM1_CH1
+PF0.Locked=true
 PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
+PF1.Locked=true
 PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
+PF14.Locked=true
+PF14.Mode=I2C
+PF14.Signal=I2C4_SCL
+PF15.Locked=true
+PF15.Mode=I2C
+PF15.Signal=I2C4_SDA
+PG10.Locked=true
+PG10.Mode=Full_Duplex_Master
+PG10.Signal=SPI3_MISO
+PG13.Locked=true
+PG13.Mode=I2C
+PG13.Signal=I2C1_SDA
+PG14.Locked=true
+PG14.Mode=I2C
+PG14.Signal=I2C1_SCL
+PG2.Locked=true
 PG2.Mode=Full_Duplex_Master
 PG2.Signal=SPI1_SCK
+PG3.Locked=true
 PG3.Mode=Full_Duplex_Master
 PG3.Signal=SPI1_MISO
+PG4.Locked=true
 PG4.Mode=Full_Duplex_Master
 PG4.Signal=SPI1_MOSI
-PG9.Mode=Asynchronous
-PG9.Signal=USART1_TX
+PG8.Locked=true
+PG8.Mode=I2C
+PG8.Signal=I2C3_SDA
+PG9.Locked=true
+PG9.Mode=Full_Duplex_Master
+PG9.Signal=SPI3_SCK
+PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Clock-Source
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PinOutPanel.CurrentBGAView=Top
@@ -226,7 +400,62 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true,11-MX_UART4_Init-UART4-false-HAL-true,12-MX_UART5_Init-UART5-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_OPAMP1_Init-OPAMP1-false-HAL-true,8-MX_OPAMP2_Init-OPAMP2-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_SPI3_Init-SPI3-false-HAL-true,13-MX_UART4_Init-UART4-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART2_UART_Init-USART2-false-HAL-true,16-MX_USART3_UART_Init-USART3-false-HAL-true
+RCC.ADCFreq_Value=32000000
+RCC.FamilyName=M
+RCC.HSE_VALUE=8000000
+RCC.HSI48_VALUE=48000000
+RCC.HSI_VALUE=16000000
+RCC.IPParameters=ADCFreq_Value,FamilyName,HSE_VALUE,HSI48_VALUE,HSI_VALUE,LSCOPinFreq_Value,LSI_VALUE,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.LSCOPinFreq_Value=32000
+RCC.LSI_VALUE=32000
+RCC.MSI_VALUE=4000000
+RCC.PLLPoutputFreq_Value=16000000
+RCC.PLLQoutputFreq_Value=16000000
+RCC.PLLRCLKFreq_Value=16000000
+RCC.PLLSAI1N=16
+RCC.PLLSAI1PoutputFreq_Value=32000000
+RCC.PLLSAI1QoutputFreq_Value=32000000
+RCC.PLLSAI1RoutputFreq_Value=32000000
+RCC.PLLSAI2PoutputFreq_Value=16000000
+RCC.PLLSAI2RoutputFreq_Value=16000000
+RCC.RNGFreq_Value=32000000
+RCC.SAI1Freq_Value=32000000
+RCC.SAI2Freq_Value=32000000
+RCC.SDMMCFreq_Value=32000000
+RCC.USBFreq_Value=32000000
+RCC.VCOInputFreq_Value=4000000
+RCC.VCOOutputFreq_Value=32000000
+RCC.VCOSAI1OutputFreq_Value=64000000
+RCC.VCOSAI2OutputFreq_Value=32000000
+SH.ADCx_IN1.0=ADC1_IN1,IN1-Differential
+SH.ADCx_IN1.1=ADC2_IN1,IN1-Differential
+SH.ADCx_IN1.2=ADC3_IN1,IN1-Differential
+SH.ADCx_IN1.ConfNb=3
+SH.ADCx_IN2.0=ADC1_IN2,IN1-Differential
+SH.ADCx_IN2.1=ADC2_IN2,IN1-Differential
+SH.ADCx_IN2.2=ADC3_IN2,IN1-Differential
+SH.ADCx_IN2.ConfNb=3
+SH.ADCx_IN3.0=ADC1_IN3,IN3-Differential
+SH.ADCx_IN3.1=ADC2_IN3,IN3-Differential
+SH.ADCx_IN3.2=ADC3_IN3,IN3-Differential
+SH.ADCx_IN3.ConfNb=3
+SH.ADCx_IN4.0=ADC1_IN4,IN3-Differential
+SH.ADCx_IN4.1=ADC2_IN4,IN3-Differential
+SH.ADCx_IN4.2=ADC3_IN4,IN3-Differential
+SH.ADCx_IN4.ConfNb=3
+SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1_ExtAndInt
+SH.COMP_DAC11_group.ConfNb=1
+SH.COMP_DAC12_group.0=DAC1_OUT2,DAC_OUT2_ExtAndInt
+SH.COMP_DAC12_group.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,Output Compare1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Output Compare2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,Output Compare3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM4_CH4.0=TIM4_CH4,Output Compare4 CH4
+SH.S_TIM4_CH4.ConfNb=1
 SPI1.CalculateBaudRate=2.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
@@ -237,14 +466,33 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+SPI3.CalculateBaudRate=2.0 MBits/s
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
+TIM1.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-Output Compare1 CH1
+TIM2.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
+TIM2.IPParameters=Channel-Output Compare2 CH2
+TIM3.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Channel-Output Compare3 CH3
+TIM4.Channel-Output\ Compare4\ CH4=TIM_CHANNEL_4
+TIM4.IPParameters=Channel-Output Compare4 CH4
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
+VP_COMP1_VS_VREFINT.Mode=VREFINT
+VP_COMP1_VS_VREFINT.Signal=COMP1_VS_VREFINT
+VP_COMP2_VS_VREFINT.Mode=VREFINT
+VP_COMP2_VS_VREFINT.Signal=COMP2_VS_VREFINT
 VP_RCC_LSE.Mode=CRS SYNC Source LSE
 VP_RCC_LSE.Signal=RCC_LSE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_V_PVD_IN.Mode=Mode_PVD_Int
+VP_SYS_V_PVD_IN.Signal=SYS_V_PVD_IN
 board=custom
